--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -18,10 +18,10 @@
     background-color: transparent;
 }
 
-@mixin flex-center($isInline){
+@mixin flex-center($isInline: false) {
     @if $isInline {
         display: inline-flex;
-    } else {
+    } @else {
         display: flex;
     }
 
