--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -6,6 +6,10 @@
         padding-top: 30px;
     }
 
+    @include mobile{
+        padding-top: 15px;
+    }
+
 
 
     &__inner{
@@ -23,6 +27,7 @@
         @include mobile{
             max-width: 144px;
         }
+        
     
     }
 
@@ -88,5 +93,6 @@
     &__button{
         height: 48px;
         padding-inline: 18px;
+        font-size: 16px;
     }
 }
