--- a/styles/styles.css
+++ b/styles/styles.css
@@ -383,12 +383,6 @@ h4 {
   border-radius: var(--border-radius);
 }
 
-.button else {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 @media (hover: hover) {
   .button:hover {
     color: var(--color-dark);
@@ -415,6 +409,12 @@ h4 {
 @media (max-width: 1280px) {
   .header {
     padding-top: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    padding-top: 15px;
   }
 }
 
@@ -518,5 +518,87 @@ h4 {
 .header__button {
   height: 48px;
   padding-inline: 18px;
+  font-size: 16px;
+}
+
+.cross-button {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  width: 48px;
+  aspect-ratio: 1;
+  position: relative;
+  border-radius: var(--border-radius-small);
+}
+
+@media (hover: hover) {
+  .cross-button:hover {
+    background-color: var(--color-accent);
+  }
+}
+
+@media (hover: none) {
+  .cross-button:active {
+    background-color: var(--color-accent);
+  }
+}
+
+.cross-button::before, .cross-button::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 7px;
+  width: 70%;
+  height: 2px;
+  background-color: var(--color-dark);
+  border-radius: 5px;
+}
+
+.cross-button::before {
+  rotate: 45deg;
+}
+
+.cross-button::after {
+  rotate: -45deg;
+}
+
+.mobile-overlay {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  border: none;
+  padding: 14px 20px;
+}
+
+.mobile-overlay:modal {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.mobile-overlay__close-button-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.mobile-overlay__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 30px;
+  min-height: 80vh;
 }
 /*# sourceMappingURL=styles.css.map */
