--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,5 +11,7 @@
         @import 
             'blocks/burger-button',
             'blocks/button',
-            'blocks/header';
+            'blocks/header',
+            'blocks/cross-button',
+            'blocks/mobile-overlay';
     
