--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -25,4 +25,12 @@
   --button-height: 68px;
 
   --transition-duration: 0.2s;
+
+  @include mobile{
+    --section-padding-y: 30px;
+  }
+
+  @include desktop{
+    --section-padding-y: 50px;
+  }
 }
