--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,5 +14,6 @@
             'blocks/header',
             'blocks/cross-button',
             'blocks/mobile-overlay', 
-            'blocks/section';
+            'blocks/section',
+            'blocks/hero';
     
