--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,5 +15,9 @@
             'blocks/cross-button',
             'blocks/mobile-overlay', 
             'blocks/section',
-            'blocks/hero';
+            'blocks/hero',
+            'blocks/puddle-bg',
+            'blocks/services',
+            'blocks/service-card',
+            'blocks/banner'  ;
     
