--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,7 +3,7 @@
   --color-dark-alt: #292a32; 
   --color-light: #ffffff;
   --color-accent: #B9FF66;
-  --color-gray: #f3f3f3;
+  --color-gray: #beb2b2;
   --color-gray-alt: #898989;
 
 
