--- a/styles/blocks/_section.scss
+++ b/styles/blocks/_section.scss
@@ -4,4 +4,26 @@
     &--hiden-x{
         overflow-x: hidden;
     }
+
+    &__header{
+        display: flex;
+        align-items: center;
+        column-gap: 40px;
+
+        @include mobile{
+            flex-direction: column;
+            row-gap: 30px;
+            text-align: center;
+        }
+
+        &:not(:last-child){
+         margin-bottom: 80px;
+         
+         
+    }   
+    }
+
+    &__discription{
+      max-width: 580px;  
+    }
 }
