--- a/styles/styles.css
+++ b/styles/styles.css
@@ -232,7 +232,7 @@ svg * {
   --color-dark-alt: #292a32;
   --color-light: #ffffff;
   --color-accent: #B9FF66;
-  --color-gray: #f3f3f3;
+  --color-gray: #beb2b2;
   --color-gray-alt: #898989;
   --border: 1px solid var(--color-dark-alt);
   --border-radius: 14px;
@@ -412,6 +412,71 @@ h4 {
 .button--transparent {
   color: var(--color-dark);
   background-color: transparent;
+}
+
+.grid {
+  --gridColums: 1;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[var];
+      grid-template-columns: repeat(var(--gridColums), 1fr);
+  gap: 40px;
+}
+
+@media (max-width: 767px) {
+  .grid {
+    gap: 30px;
+  }
+}
+
+.grid--2 {
+  --gridColums: 2;
+}
+
+.grid--3 {
+  --gridColums: 3;
+}
+
+.grid--4 {
+  --gridColums: 4;
+}
+
+.grid--5 {
+  --gridColums: 5;
+}
+
+.grid--6 {
+  --gridColums: 6;
+}
+
+.grid--7 {
+  --gridColums: 7;
+}
+
+.grid--8 {
+  --gridColums: 8;
+}
+
+.grid--9 {
+  --gridColums: 9;
+}
+
+.grid--10 {
+  --gridColums: 10;
+}
+
+.grid--11 {
+  --gridColums: 11;
+}
+
+.grid--12 {
+  --gridColums: 12;
+}
+
+@media (max-width: 1023px) {
+  .grid--2 {
+    --gridColums: 1;
+  }
 }
 
 .header {
@@ -622,6 +687,36 @@ h4 {
   overflow-x: hidden;
 }
 
+.section__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 40px;
+          column-gap: 40px;
+}
+
+@media (max-width: 767px) {
+  .section__header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 30px;
+    text-align: center;
+  }
+}
+
+.section__header:not(:last-child) {
+  margin-bottom: 80px;
+}
+
+.section__discription {
+  max-width: 580px;
+}
+
 .hero {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -787,6 +882,261 @@ h4 {
     width: 100%;
     max-width: 100%;
     margin-bottom: 20px;
+  }
+}
+
+.puddle-bg {
+  padding-inline: 7px;
+  background-color: var(--color-accent);
+  border-radius: var(--border-radius-small);
+}
+
+.puddle-bg--light {
+  background-color: var(--color-light);
+}
+
+.services__list:not(:last-child) {
+  margin-bottom: 100px;
+}
+
+@media (max-width: 767px) {
+  .services__list:not(:last-child) {
+    margin-bottom: 70px;
+  }
+}
+
+.service-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+  min-height: 310px;
+  padding: 50px;
+  background-color: var(--color-gray);
+  border: var(--border);
+  border-radius: var(--border-radius-large);
+  -webkit-box-shadow: var(--shadow);
+          box-shadow: var(--shadow);
+}
+
+@media (max-width: 767px) {
+  .service-card {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    row-gap: 27px;
+  }
+}
+
+.service-card--accent-bg {
+  background-color: var(--color-accent);
+}
+
+.service-card--dark-bg {
+  background-color: var(--color-dark);
+}
+
+.service-card__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  row-gap: 30px;
+}
+
+@media (max-width: 767px) {
+  .service-card__body {
+    display: contents;
+  }
+}
+
+.service-card__image {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+@media (max-width: 1280px) {
+  .service-card__image {
+    max-width: 165px;
+  }
+}
+
+@media (max-width: 767px) {
+  .service-card__image {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.service-card__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+@media (max-width: 767px) {
+  .service-card__title {
+    grid-column: -1/1;
+  }
+}
+
+.service-card__link {
+  --serviceCardLinkIconColor: var(--color-accent);
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 15px;
+          column-gap: 15px;
+  font-size: 20px;
+}
+
+@media (hover: hover) {
+  .service-card__link:hover {
+    opacity: 0.7;
+  }
+}
+
+@media (hover: none) {
+  .service-card__link:active {
+    opacity: 0.7;
+  }
+}
+
+@media (max-width: 767px) {
+  .service-card__link {
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+  }
+}
+
+.service-card__link--light {
+  --serviceCardLinkIconColor: var(--color-dark);
+  color: var(--color-light);
+}
+
+.service-card__link-icon-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 41px;
+  aspect-ratio: 1;
+  background-color: currentColor;
+  border-radius: 50%;
+}
+
+.service-card__link-icon-wrapper svg {
+  color: var(--serviceCardLinkIconColor);
+}
+
+@media (max-width: 767px) {
+  .service-card__link-label {
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    margin: -1px !important;
+    border: 0 !important;
+    padding: 0 !important;
+    white-space: nowrap !important;
+    -webkit-clip-path: inset(100%) !important;
+            clip-path: inset(100%) !important;
+    clip: rect(0 0 0 0) !important;
+    overflow: hidden !important;
+  }
+}
+
+.banner {
+  --bannerImageOffsetY: 24px;
+  padding-block: var(--bannerImageOffsetY);
+}
+
+@media (max-width: 1023px) {
+  .banner {
+    --bannerImageOffsetY: 0;
+  }
+}
+
+.banner__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--color-gray);
+  border-radius: var(--border-radius-large);
+}
+
+.banner__body {
+  padding: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  row-gap: 26px;
+}
+
+@media (max-width: 1023px) {
+  .banner__body {
+    padding: 50px;
+  }
+}
+
+.banner__description {
+  max-width: 500px;
+}
+
+.banner__image {
+  margin-block: calc(var(--bannerImageOffsetY) * -1);
+}
+
+@media (max-width: 1023px) {
+  .banner__image {
+    max-width: 40%;
+    height: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .banner__image {
+    row-gap: 20px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
