--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,6 +11,7 @@
         @import 
             'blocks/burger-button',
             'blocks/button',
+            'blocks/grid',
             'blocks/header',
             'blocks/cross-button',
             'blocks/mobile-overlay', 
