--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -20,5 +20,6 @@
             'blocks/puddle-bg',
             'blocks/services',
             'blocks/service-card',
-            'blocks/banner'  ;
+            'blocks/banner',
+            'blocks/studies'  ;
     
