--- a/styles/blocks/_studies.scss
+++ b/styles/blocks/_studies.scss
@@ -1,14 +1,29 @@
 .studies{
-    padding: 70px 60px;
-    color: var(--color-light);
-    background-color: var(--color-dark);
-    border-radius: var(--border-radius-large);
+
+    @include desktop-above{
+        padding: 70px 60px;
+    }
+
+    @include mobile-above{
+        padding: 40px;
+        color: var(--color-light);
+        background-color: var(--color-dark);
+        border-radius: var(--border-radius-large);
+    }
 
 
     &__list{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+    
+        // cоздаем слайдер без js
+     @include mobile{ 
+        scroll-snap-type: x mandatory; // задаем параметры скролла по оси X
+        overflow-x: scroll; // включаем горизонтальный скролл
+        width: 100vw; // чтобы элементы выпирали за границы экрана
+        column-gap: 20px;
     }
+}
 
     &__item{
         --studiesItemPaddingX: 64px;
@@ -17,14 +32,31 @@
         flex-direction: column;
         row-gap: 20px;
 
-        &:not(:first-child){
-            padding-left: var(--studiesItemPaddingX);
+        @include desktop{
+            --studiesItemPaddingX: 32px;
         }
 
-        &:not(:last-child){
-            padding-right: var(--studiesItemPaddingX);
-            border-right: 1px solid var(--color-light);
+        @include mobile-above{
+            &:not(:first-child){
+                padding-left: var(--studiesItemPaddingX);
         }
+
+            &:not(:last-child){
+                padding-right: var(--studiesItemPaddingX);
+                border-right: 1px solid var(--color-light);
+            }
+        }
+
+        @include mobile{
+            min-width: 350px;
+            padding: 42px 50px;
+            color: var(--color-light);
+            background-color: var(--color-dark);
+            border-radius: var(--border-radius-large);
+            scroll-snap-align: start; // выравнивание по началу слайда
+        }
+
+       
     }
 
     &__link{
