--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1136,11 +1136,19 @@ h4 {
   }
 }
 
-.studies {
-  padding: 70px 60px;
-  color: var(--color-light);
-  background-color: var(--color-dark);
-  border-radius: var(--border-radius-large);
+@media (min-width: 1281px) {
+  .studies {
+    padding: 70px 60px;
+  }
+}
+
+@media (min-width: 768px) {
+  .studies {
+    padding: 40px;
+    color: var(--color-light);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+  }
 }
 
 .studies__list {
@@ -1148,6 +1156,17 @@ h4 {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+}
+
+@media (max-width: 767px) {
+  .studies__list {
+    -ms-scroll-snap-type: x mandatory;
+        scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+    width: 100vw;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+  }
 }
 
 .studies__item {
@@ -1162,13 +1181,31 @@ h4 {
   row-gap: 20px;
 }
 
-.studies__item:not(:first-child) {
-  padding-left: var(--studiesItemPaddingX);
+@media (max-width: 1280px) {
+  .studies__item {
+    --studiesItemPaddingX: 32px;
+  }
 }
 
-.studies__item:not(:last-child) {
-  padding-right: var(--studiesItemPaddingX);
-  border-right: 1px solid var(--color-light);
+@media (min-width: 768px) {
+  .studies__item:not(:first-child) {
+    padding-left: var(--studiesItemPaddingX);
+  }
+  .studies__item:not(:last-child) {
+    padding-right: var(--studiesItemPaddingX);
+    border-right: 1px solid var(--color-light);
+  }
+}
+
+@media (max-width: 767px) {
+  .studies__item {
+    min-width: 350px;
+    padding: 42px 50px;
+    color: var(--color-light);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+    scroll-snap-align: start;
+  }
 }
 
 .studies__link {
