--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,5 +21,6 @@
             'blocks/services',
             'blocks/service-card',
             'blocks/banner',
-            'blocks/studies'  ;
+            'blocks/studies',
+            'blocks/process'  ;
     
