Добавление стилизации секции team

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -22,5 +22,7 @@
             'blocks/service-card',
             'blocks/banner',
             'blocks/studies',
-            'blocks/process'  ;
+            'blocks/process', 
+            'blocks/team',
+            'blocks/_team-card'  ;
     
