--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1082,4 +1082,55 @@ h4 {
 .process__accordion-indicator::after {
   rotate: var(--indicatorVerticalRotate);
   transition-duration: var(--transition-duration);
+}
+
+.team {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+}
+.team__button {
+  align-self: end;
+  min-width: 269px;
+}
+
+.team-card {
+  padding: 40px 35px;
+  height: 100%;
+  border: var(--border);
+  border-radius: var(--border-radius-large);
+  box-shadow: var(--shadow);
+}
+.team-card__header {
+  display: flex;
+}
+.team-card__image:not(:last-child) {
+  margin-right: 20px;
+}
+.team-card__info {
+  align-self: end;
+}
+.team-card__info:not(:last-child) {
+  margin-right: 10px;
+}
+.team-card__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 34px;
+  aspect-ratio: 1;
+  align-self: start;
+  margin-left: auto;
+  flex-shrink: 0;
+  color: var(--color-accent);
+  background-color: var(--color-dark);
+  border-radius: 50%;
+}
+.team-card__name:not(:last-child) {
+  margin-bottom: 3px;
+}
+.team-card__body {
+  margin-top: 28px;
+  padding-top: 28px;
+  border-top: var(--border);
 }/*# sourceMappingURL=styles.css.map */
