Адаптация секции team

--- a/styles/blocks/_grid.scss
+++ b/styles/blocks/_grid.scss
@@ -27,4 +27,14 @@
             --gridColums: 1;
         }
     }
+
+    &--3{
+        @include desktop{
+            --gridColums: 2;
+        }
+        
+        @include mobile{
+            --gridColums: 1;
+        }
+    }
 }
