--- a/styles/blocks/_team-card.scss
+++ b/styles/blocks/_team-card.scss
@@ -6,6 +6,10 @@
     border-radius: var(--border-radius-large);
     box-shadow: var(--shadow);
 
+    @include mobile{
+        padding-inline: 50px;
+    }
+
     &__header{
         display: flex;
     }
@@ -46,5 +50,10 @@
         margin-top: 28px;
         padding-top: 28px;
         border-top: var(--border);
+
+        @include mobile{
+            padding-top: 20px;
+            margin-top: 20px;
+        }
     }
 }
