Добавлена стилизация секции reviews

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -24,5 +24,8 @@
             'blocks/studies',
             'blocks/process', 
             'blocks/team',
-            'blocks/_team-card'  ;
+            'blocks/_team-card',
+            'blocks/pagination',
+            'blocks/reviews',
+            'blocks/review-card'  ;
     
