--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1200,8 +1200,19 @@ h4 {
   border-radius: var(--border-radius-large);
   overflow-x: hidden;
 }
+@media (max-width: 1023px) {
+  .reviews {
+    padding: 30px 30px 46px;
+    row-gap: 46px;
+  }
+}
 .reviews__slider {
   --reviewsSliderSlideWidth: 606px;
+}
+@media (max-width: 1023px) {
+  .reviews__slider {
+    --reviewsSliderSlideWidth: 330px;
+  }
 }
 .reviews__slider-list {
   display: flex;
@@ -1209,7 +1220,17 @@ h4 {
        column-gap: 50px;
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
-  margin-left: calc(var(--reviewsSliderSlideWidth) / 2 * -1);
+}
+@media (min-width: 1024px) {
+  .reviews__slider-list {
+    margin-left: calc(var(--reviewsSliderSlideWidth) / 2 * -1);
+  }
+}
+@media (max-width: 1023px) {
+  .reviews__slider-list {
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+  }
 }
 .reviews__slider-item {
   min-width: var(--reviewsSliderSlideWidth);
@@ -1260,11 +1281,23 @@ h4 {
   flex-direction: column;
   row-gap: 48px;
 }
+@media (max-width: 767px) {
+  .review-card {
+    --reviewCardCornerWidth: 32px;
+    --reviewCardCornerOffsetLeft: 46px;
+    row-gap: 44px;
+  }
+}
 .review-card__body {
   position: relative;
   padding: 48px var(--reviewCardCornerOffsetLeft) 52px;
   border: 1px solid var(--color-accent);
   border-radius: var(--border-radius-large);
+}
+@media (max-width: 767px) {
+  .review-card__body {
+    padding: 30px;
+  }
 }
 .review-card__body::after {
   width: var(--reviewCardCornerWidth);
