--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,7 +8,10 @@
 
 
 
-        @import 
+        @import
+            'blocks/field',
+            'blocks/radios',
+            'blocks/radio',
             'blocks/burger-button',
             'blocks/button',
             'blocks/grid',
@@ -27,5 +30,6 @@
             'blocks/_team-card',
             'blocks/pagination',
             'blocks/reviews',
-            'blocks/review-card'  ;
+            'blocks/review-card',
+            'blocks/contact-us' ;
     
