--- a/styles/blocks/_field.scss
+++ b/styles/blocks/_field.scss
@@ -1,4 +1,12 @@
 .field{
+    //чтобы не обращаться к field input создаю несколько локальных переменных
+    --fieldInputHeight: var(--input-height);
+    --fieldInputTextColor: var(--color-dark); //начальное значение color для field input по макету
+    --fieldInputBgColor: var(--color-light);
+    --fieldInputBorderColor: var(--color-dark);
+    --fieldInpurPlaceholderColor: var(--color-dark-alt);
+    --fieldInputHoverBgColor: var(--color-accent);
+
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -8,19 +16,34 @@
         row-gap: 10px;
     }
 
+    &--big-height{
+        --fieldInputHeight: var(--button-height);
+    }
+
+    &--dark-bg{
+    --fieldInputTextColor: var(--color-accent);
+    --fieldInputBgColor: var(--color-dark-alt);
+    --fieldInputBorderColor: var(--color-light);
+    --fieldInpurPlaceholderColor: var(--color-light);
+    --fieldInputHoverBgColor: var(--color-dark);
+    }
+
+
     &__label{
         @include fluid-text(16, 14);
     }
 
     &__input{
         width: 100%;
-        height: var(--input-height);
+        height: var(--fieldInputHeight);
         padding-inline: 30px;
-        border: var(--border);
+        color: var(--fieldInputTextColor);
+        background-color: var(--fieldInputBgColor);
+        border: 1px solid var(--fieldInputBorderColor);
         border-radius: var(--border-radius);
 
         @include hover{
-            background-color: var(--color-accent);
+            background-color: var(--fieldInputHoverBgColor);
         }
 
         @include mobile{
@@ -33,7 +56,7 @@
         }
 
         &::placeholder{
-            color: var(--color-gray-alt);
+            color: var(--fieldInpurPlaceholderColor);
         }
 
         &--textarea{
