--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,6 +31,9 @@
             'blocks/pagination',
             'blocks/reviews',
             'blocks/review-card',
-            'blocks/contact-us' ;
+            'blocks/contact-us',
+            'blocks/soc1als',
+            'blocks/subscribe-form',
+            'blocks/footer' ;
            
     
