--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -1,9 +1,26 @@
 .footer{
+
+    @include mobile{
+        padding-inline: 0;
+    }
+
     &__inner{
         padding: 55px 60px 50px;
         color: var(--color-light);
         background-color: var(--color-dark);
-        border-radius: var(--border-radius-large) var(--border-radius-large) 0 0 ;
+
+        @include mobile-above{
+        
+            border-radius: var(--border-radius-large) var(--border-radius-large) 0 0 ;
+        }
+
+        @include mobile{
+            align-items: center;
+            padding: 50px var(--container-padding-x) 30px;
+            display: flex;
+            flex-direction: column;
+            row-gap: 37px;
+        }
     }
 
     &__navigation{
@@ -12,6 +29,16 @@
         align-items: center;
         column-gap: 30px;
 
+        @include tablet{
+            flex-direction: column;
+            align-items: center;
+            row-gap: 37px;
+        }
+
+
+        @include mobile{
+            display: contents; //спускаем иконки  soc1als вниз
+        }
 
         &:not(:last-child){
             margin-bottom: 66px;
@@ -23,6 +50,11 @@
             display: flex;
             align-items: center;
             column-gap: 40px;
+
+            @include mobile{
+                flex-direction: column;
+                row-gap: 15px;
+            }
         }
 
         &-link{
@@ -40,16 +72,36 @@
         }
     }
 
+    &__soc1als{
+        @include mobile{
+            order: 1;
+        }
+    }
+
     &__body{
         display: flex;
         justify-content: space-between;
         column-gap: 50px;
 
-        &:not(:last-child){
+         @include mobile-above{
+              &:not(:last-child){
             margin-bottom: 50px;
             padding-bottom: 50px;
             border-bottom: 1px solid currentColor;
+            }
         }
+
+        @include mobile{
+            flex-direction: column;
+            align-items: center;
+            row-gap: inherit;
+        }
+
+        @include mobile-s{
+            width: 100%;
+        }
+
+       
     }
 
     &__contacts{
@@ -57,6 +109,11 @@
          flex-direction: column;
          align-items: start;
          row-gap: 27px;
+
+         @include mobile{
+            align-items: center;
+            text-align: center;
+         }
 
          &-title{
             color: var(--color-dark);
@@ -80,6 +137,17 @@
     &__extra{
         display: flex;
         column-gap: 40px;
+
+        @include mobile{
+            order: 2;
+            flex-direction: column;
+            align-items: center;
+            row-gap: 15px;
+
+            width: 100%;
+            padding-top: 37px;
+            border-top: 1px solid currentColor;
+        }
     }
 
     &__privacy-policy-link{
